--- a/src/shbat_pkg/config/mapper_params_online_async.yaml
+++ b/src/shbat_pkg/config/mapper_params_online_async.yaml
@@ -15,14 +15,16 @@ slam_toolbox:
     base_frame: base_footprint
     scan_topic: /scan
     use_map_saver: true
-    mode: mapping #mapping
+    mode: localization #mapping
 
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
     # # will use pose
-    # map_file_name: /home/zouq/ros2_ws/src/hilmi_pkg/map/gallery_map_serial
+    map_file_name: /home/sahabat/sahabat_ws/src/shbat_pkg/map/map_serial
     # map_start_pose: [0.0, 0.0, 0.0]
     map_start_at_dock: true
+
+
 
     debug_logging: false
     throttle_scans: 1
