--- a/src/shbat_pkg/config/mapper_params_online_async.yaml
+++ b/src/shbat_pkg/config/mapper_params_online_async.yaml
@@ -1,7 +1,7 @@
 slam_toolbox:
   ros__parameters:
 
-    # Plugin params
+    # Plugin parameters
     solver_plugin: solver_plugins::CeresSolver
     ceres_linear_solver: SPARSE_NORMAL_CHOLESKY
     ceres_preconditioner: SCHUR_JACOBI
@@ -12,34 +12,33 @@ slam_toolbox:
     # ROS Parameters
     odom_frame: odom
     map_frame: map
-    base_frame: base_footprint
+    base_frame: base_link
     scan_topic: /scan
     use_map_saver: true
-    mode: localization #mapping
+    mode: mapping
 
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
     # # will use pose
-    map_file_name: /home/sahabat/sahabat_ws/src/shbat_pkg/map/map_serial
+    # map_file_name: /home/sahabat/sahabat_ws/src/shbat_pkg/map/map_serial
     # map_start_pose: [0.0, 0.0, 0.0]
     map_start_at_dock: true
 
-
-
+    # Debugging and logging parameters
     debug_logging: false
     throttle_scans: 1
-    transform_publish_period: 0.02 #if 0 never publishes odometry
+    transform_publish_period: 0.02 # If 0, never publishes odometry
     map_update_interval: 5.0
     resolution: 0.03
-    min_laser_range: 0.3 #for rastering images
-    max_laser_range: 20.0 #for rastering images
+    min_laser_range: 0.3  # Minimum laser range for rastering images
+    max_laser_range: 20.0  # Maximum laser range for rastering images
     minimum_time_interval: 0.3
     transform_timeout: 0.2
     tf_buffer_duration: 30.
-    stack_size_to_use: 40000000 #// program needs a larger stack size to serialize large maps
+    stack_size_to_use: 40000000 # Larger stack size to serialize large maps
     enable_interactive_mode: true
 
-    # General Parameters
+    # General parameters for SLAM process
     use_scan_matching: true
     use_scan_barycenter: true
     minimum_travel_distance: 0.2
@@ -49,29 +48,30 @@ slam_toolbox:
     link_match_minimum_response_fine: 0.1  
     link_scan_maximum_distance: 1.0
     loop_search_maximum_distance: 2.0
-    do_loop_closing: true 
-    loop_match_minimum_chain_size: 8           
-    loop_match_maximum_variance_coarse: 2.5 
-    loop_match_minimum_response_coarse: 0.35    
+    do_loop_closing: true
+    loop_match_minimum_chain_size: 8
+    loop_match_maximum_variance_coarse: 2.5
+    loop_match_minimum_response_coarse: 0.35
     loop_match_minimum_response_fine: 0.45
 
-    # Correlation Parameters - Correlation Parameters
+    # Correlation parameters for SLAM
     correlation_search_space_dimension: 0.4
     correlation_search_space_resolution: 0.01
-    correlation_search_space_smear_deviation: 0.1 
+    correlation_search_space_smear_deviation: 0.1
 
-    # Correlation Parameters - Loop Closure Parameters
+    # Loop closure correlation parameters
     loop_search_space_dimension: 6.0
     loop_search_space_resolution: 0.05
     loop_search_space_smear_deviation: 0.03
 
-    # Scan Matcher Parameters
+    # Scan matcher parameters
     distance_variance_penalty: 0.3      
-    angle_variance_penalty: 0.8   
+    angle_variance_penalty: 0.8
 
-    fine_search_angle_offset: 0.00349     
-    coarse_search_angle_offset: 0.349   
-    coarse_angle_resolution: 0.0349        
+    # Fine and coarse search offsets for scan matching
+    fine_search_angle_offset: 0.00349
+    coarse_search_angle_offset: 0.349
+    coarse_angle_resolution: 0.0349
     minimum_angle_penalty: 0.5
     minimum_distance_penalty: 0.3
     use_response_expansion: true
