--- a/src/shbat_pkg/package.xml
+++ b/src/shbat_pkg/package.xml
@@ -59,6 +59,7 @@
 <depend>nav_msgs</depend>
 <depend>geometry_msgs</depend>
 <depend>std_msgs</depend>
+<depend>robot_localization</depend>
 
 <!-- Motor driver dependencies -->
 <exec_depend>python3-numpy</exec_depend>
